# 4genthub-hooks

./: .env.sample  .gitignore  .gitmodules  .mcp.json  .mcp.json.sample  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  INLINE_HOOKS_README.md  LICENSE  PORTABLE_HOOKS_README.md  QUICKSTART.md  README.md  RULE_CLAUDECODE__copy-to-root-project-rename-to:CLAUDE.local.md  RULE_CLAUDECODE__copy-to-root-project-rename-to:CLAUDE.md  RULE_CLAUDECODE_version_economic_token__copy-to-root-project-rename-to:CLAUDE.md.md  SETUP.md  SUBMODULE_COMPATIBILITY_FIX.md  codex.md  copy-to-root-project-rename-to--CLAUDE.local.md  copy-to-root-project-rename-to:AGENTS.md  fix-python314-hooks.sh  install_hooks.py  loop-worker_testfix.sh  mcp-proxy.md  pyproject.toml  settings.json  settings.json.sample  settings.local.json  setup.py  setup_package.py  validate_installation.py
.claude/: INLINE_HOOKS_README.md  runtime_agent_context.json  settings.json
agent-memory/: coding-agent.md  shared.md
agents/: _TEMPLATE.md  analytics-setup-agent.md  branding-agent.md  code-reviewer-agent.md  coding-agent.md  community-strategy-agent.md  compliance-scope-agent.md  core-concept-agent.md  creative-ideation-agent.md  debugger-agent.md  deep-research-agent.md  design-system-agent.md  devops-agent.md  documentation-agent.md  efficiency-optimization-agent.md  elicitation-agent.md  ethical-review-agent.md  health-monitor-agent.md  llm-ai-agents-research.md  marketing-strategy-orchestrator-agent.md  ml-specialist-agent.md  performance-load-tester-agent.md  project-initiator-agent.md  prototyping-agent.md  (+8 more)
(+270 files in other folders)
