[project]
name = "claude-code-hooks"
version = "1.0.0"
description = "Dependencies for Claude Code hooks and utilities"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
enhanced = [
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Tool configurations
[tool.uv]
dev-dependencies = []

[tool.pip]
# Ensure compatible versions
no-deps = false
